<resources>
    <string name="app_name">Module4</string>

    <string name="lable_next">Next</string>
    //activity itemAnimal2
    <string name="lable_title_animal">Animal:</string>
    <string name="lable_title_fragments">Fragments Ejemplos</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="inicio_de_sesi_n">INICIO DE SESIÓN</string>
    <string name="ingresa_la_siguiente_informaci_n">Ingresa la \n siguiente información</string>
    <string name="usuario">Usuario</string>
    <string name="contrase_a">Contraseña</string>
    <string name="entrar">Entrar</string>
    <string name="link_register">si no estas registrado, clic aquí</string>
    <string name="User">Usuario</string>
    <string name="registro">REGISTRO</string>
    <string name="title_activity_init">InitActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="avatar_select">SELECIONA TU AVATAR</string>
    <string name="contentAvatarDesc1">Selecciona el avatar 1</string>
    <string name="contentAvatarDesc2">Selecciona el avatar 2</string>
    <string name="gameBtnVocales1">Ir al juego Vocales 1</string>
    <string name="more_games_later">Más Juegos próximamente</string>
    <string name="btnCheckroomShoes">Botón para accesorios de pies</string>
    <string name="btnCheckroomArms">Botón para accesorios de brazos</string>
    <string name="btnCheckroomHead">Botón para accesorios de cabeza</string>
    <string name="user_name">UserName</string>
</resources>